fix path style.css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Ejercicio de IDs y clases CSS</title>
     <link rel="stylesheet" href="ejercicio_clases_ids_css_starwars.css" type="text/css">
-    <link rel="stylesheet" href="/styles.css" type="text/css">
+    <link rel="stylesheet" href="styles.css" type="text/css">
   </head>
   <body>
     <h1>Los bandos de Star Wars</h1>
